zuul配置调整，兼容security ，开放 openapi，关闭manager 权限

--- a/vastpn-user/src/main/resources/bootstrap.yml
+++ b/vastpn-user/src/main/resources/bootstrap.yml
@@ -120,5 +120,7 @@ security:
 management:
   security:
     enabled: true
+
 logging:
-  path: ./logs/vastpn-user
+  file: ./logs/${spring.application.name}/${spring.application.name}.log
+  pattern:
