--- a/vastpn-eureka/src/main/resources/bootstrap.yml
+++ b/vastpn-eureka/src/main/resources/bootstrap.yml
@@ -39,16 +39,16 @@ server:
 #    security.user.password=
 ##########################################
 management:
+  context-path: /${spring.application.name}
   security:
-    enabled: true
+    enabled: true # actuator 安全启用状态
+endpoints:
   health:
-    defaults:
-      enabled: true
+    enabled: true
 security:
   user:
     name: bu-admin
     password: 123456
   basic:
     enabled: true
-endpoints:
-  enabled: false
+
