--- a/vastpn-email/src/main/resources/bootstrap.yml
+++ b/vastpn-email/src/main/resources/bootstrap.yml
@@ -21,7 +21,7 @@ spring:
   cloud:
     config:
       enabled: true
-      profile: sit
+      profile: dev
       discovery:
         enabled: true
         service-id: vastpn-config
