--- a/vastpn-order/src/main/resources/bootstrap.yml
+++ b/vastpn-order/src/main/resources/bootstrap.yml
@@ -20,7 +20,7 @@ spring:
   cloud:
     config:
       enabled: true
-      profile: sit
+      profile: dev
       discovery:
         enabled: true
         service-id: vastpn-config
