--- a/vastpn-zuul/src/main/resources/bootstrap.yml
+++ b/vastpn-zuul/src/main/resources/bootstrap.yml
@@ -110,3 +110,5 @@ management:
 endpoints:
   health:
     enabled: true
+logging:
+  file: ./logs/${spring.application.name}/${spring.application.name}.log
