调整集群监控--待验证

--- a/vastpn-admin/pom.xml
+++ b/vastpn-admin/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>spring-boot-admin-server-ui-turbine</artifactId>
             <version>${spring-boot-admin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server-ui-activiti</artifactId>
+            <version>${spring-boot-admin.version}</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
             <!--<artifactId>spring-boot-starter-amqp</artifactId>-->
