--- a/vastpn-parent/pom.xml
+++ b/vastpn-parent/pom.xml
@@ -52,9 +52,16 @@
             </dependency>
             <dependency>
                 <groupId>de.codecentric</groupId>
-                <artifactId>spring-boot-admin-starter-client</artifactId>
+                <artifactId>spring-boot-admin-dependencies</artifactId>
                 <version>${spring-boot-admin.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
+            <!--<dependency>-->
+                <!--<groupId>de.codecentric</groupId>-->
+                <!--<artifactId>spring-boot-admin-starter-client</artifactId>-->
+                <!--<version>${spring-boot-admin.version}</version>-->
+            <!--</dependency>-->
         </dependencies>
     </dependencyManagement>
 
