--- a/vastpn-admin/pom.xml
+++ b/vastpn-admin/pom.xml
@@ -74,6 +74,10 @@
             <artifactId>spring-boot-admin-server-ui-activiti</artifactId>
             <version>${spring-boot-admin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
             <!--<artifactId>spring-boot-starter-amqp</artifactId>-->
