--- a/vastpn-zuul/pom.xml
+++ b/vastpn-zuul/pom.xml
@@ -32,6 +32,11 @@
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-client</artifactId>
         </dependency>
+        <!--zuul 使用okhttp 与feign使用okhttp 所用的包不一样-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
