feign 使用okhttp, 能用ribbon、feign使用（debug 测试看到conditiononmission okhttp）

--- a/vastpn-email/src/main/resources/bootstrap.yml
+++ b/vastpn-email/src/main/resources/bootstrap.yml
@@ -74,6 +74,10 @@ feign:
 # timeoutInMilliseconds > (ribbonReadTimeout + ribbonConnectTimeout) * (maxAutoRetries + 1) * (maxAutoRetriesNextServer + 1);
 #################################################
 ribbon:
+  okhttp:
+    enabled: true
+  httpclient:
+    enabled: false
   ReadTimeout: 6000
   ConnectTimeout: 6000
 hystrix:
